--- a/NewsEditorCore/AssistantCore.csproj
+++ b/NewsEditorCore/AssistantCore.csproj
@@ -4,10 +4,20 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <ApplicationIcon>user_administrator_green_15073.ico</ApplicationIcon>
+    <NoWin32Manifest>true</NoWin32Manifest>
+    <Authors>Шарыгин К.В.</Authors>
+    <PackageIcon>bot.png</PackageIcon>
+    <PackageIconUrl />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
@@ -95,6 +105,10 @@
     <None Remove="tinymce\LICENSE.TXT" />
     <None Remove="tinymce\tinymce.htm" />
     <None Remove="tinymce\tinymceTemplate.htm" />
+    <None Include="D:\Downloads\bot.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
@@ -197,6 +211,11 @@
     <Compile Update="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Update="TinyMCE.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -211,6 +230,10 @@
     </EmbeddedResource>
     <EmbeddedResource Update="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="TinyMCE.resx">
       <DependentUpon>TinyMCE.cs</DependentUpon>
