--- a/NewsEditorCore/AssistantCore.csproj
+++ b/NewsEditorCore/AssistantCore.csproj
@@ -260,6 +260,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentFTP" Version="37.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
