--- a/NewsEditorCore/configuration.json
+++ b/NewsEditorCore/configuration.json
@@ -6,6 +6,6 @@
     "Password": "U0U9W-K5IY"
   },
   "MySql": {
-    "ConnectionString": "datasource=mysql.hosting.nic.ru;initial catalog=soft123_vn;user id=soft123_cms6;password=A2V-wCcT;Allow Zero DateTime=true;Convert Zero Datetime=true;"
+    "ConnectionString": ""
   } 
 }
