--- a/NewsEditorCore/configuration.json
+++ b/NewsEditorCore/configuration.json
@@ -1,11 +1,16 @@
 {
   "Ftp": {
-    "Host": "ftp.soft123.nichost.ru",
-    "Path": "xn--80adjnibthssp.xn--p1ai/docs/images",
-    "Login": "soft123_vn",
-    "Password": "U0U9W-K5IY"
+    "Host": "",
+    "Path": "",
+    "Login": "",
+    "Password": ""
   },
   "MySql": {
     "ConnectionString": ""
-  } 
+  },
+  "PrintConfiguration": {
+    "Landscape": true,
+    "Margin": [20, 20, 20, 80], // Измеряется в пикселях (примерно 4px на 1мм)
+    "FontSize": 14
+  }
 }
