--- a/NewsEditorCore/AssistantCore.csproj
+++ b/NewsEditorCore/AssistantCore.csproj
@@ -263,6 +263,7 @@
   <ItemGroup>
     <PackageReference Include="FluentFTP" Version="37.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="QRCoder" Version="1.4.3" />
   </ItemGroup>
 
   <ItemGroup>
